# batstat

./: tutServer.c
adc_master_side/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_old  Makefile  QVoltageIndicator  cmake_install.cmake
adc_master_side/QVoltageIndicator_autogen/: moc_predefs.h  mocs_compilation.cpp
adc_master_side/QVoltageIndicator_autogen/25ZGQS3P5M/: moc_QAsyncSerial.cpp  moc_QVoltageIndicatorApp.cpp
adc_master_side/QVoltageIndicator_autogen/UVLADIE3JM/: moc_QAsyncSerial.cpp  moc_QVoltageIndicatorApp.cpp
adc_master_side/src/: QAsyncSerial.hpp  QVoltageIndicatorApp.cpp  QVoltageIndicatorApp.hpp  main.cpp
adc_master_side/src/AsyncSerial/: AsyncSerial.cpp  AsyncSerial.hpp
adc_master_side/src/QtImpl/: QAsyncSerial.cpp  QVoltageIndicatorApp.cpp  QVoltageIndicatorApp.hpp
adc_master_side/src/Socket/: Client.cpp  Client.hpp
adc_slave_side/: adc.c  adc.hex  adc2.c  up.sh
